**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-17

* Prediction with matrix arguments (i.e. for models using summation 
  convention) could be very memory hungry. This in turn meant that
  bam could run out of memory when fitting models with such terms.
  The problem was memory inefficient hhandling of duplicate evaluations.
  Now fixed by modification of PredictMat

* bam could fail if the response vector was of class matrix. fixed.

* reduced rank mrf smooths with supplied penalty could use the incorrect
  penalty rank when computing the reduced rank basis and fail. fixed 
  thanks to Fabian Scheipl.

1.7-16

* There was an unitialized variable bug in the 1.7-14 re-written "cr" basis 
  code for the case k=3. Fixed.

* gam.check modified slightly so that k test only applied to smooths of
  numeric variables, not factors.

1.7-15

* Several packages had documentation linking to the 'mgcv' function
  help page (now removed), when a link to the package was meant. An alias
  has been added to mgcv-package.Rd to fix/correct these links. 

1.7-14

** predict.bam now added as a wrapper for predict.gam, allowing parallel 
   computation

** bam now has method="fREML" option which uses faster REML optimizer: 
   can make a big difference on parameter rich models.

* bam can now use a cross product and Choleski based method to accumulate
  the required model matrix factorization. Faster, but less stable than 
  the QR based default.

* bam can now obtain starting values using a random sub sample of the data. 
  Useful for seriously large datasets. 

* check of adequacy of basis dimensions added to gam.check

* magic can now deal with model matrices with more columns than rows.

* p-value reference distribution approximations improved.

* bam returns objects of class "bam" inheriting from "gam"

* bam now uses newdata.guaranteed=TRUE option when predicting as part
  of model matrix decomposition accumulation. Speeds things up. 
