@@ -2602,11 +2602,27 @@ testStat <- function(p,X,V,rank=NULL,type=0,res.df= -1) {
 
 
 
-summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...) 
-# summary method for gam object - provides approximate p values for terms + other diagnostics
-# Improved by Henric Nilsson
-{ pinv<-function(V,M,rank.tol=1e-6)
-  {
+summary.gam <- function (object, dispersion = NULL, freq = TRUE, p.type=0, ...) {
+## summary method for gam object - provides approximate p values 
+## for terms + other diagnostics
+## Improved by Henric Nilsson
+## * freq determines whether a frequentist or Bayesian cov matrix is 
+##   used for parametric terms. Usually the default TRUE will result
+##   in reasonable results with paraPen.
+## * p.type determines the type of smooth p-value
+##   0 Bayesian default, unless smooth opts out
+##   1 Bayesian biased rounding
+##   2 Bayesian rounding
+##   3 Bayesian round up
+##   4 Bayesian numerical rank
+##   5 Wood (2006) frequentist
+##   -1 Modified Cox et al.
+## If a smooth has a field 'fr.pval' and it is set to TRUE then 
+## its p-value is based on the full rank frequentist Wald statistic. 
+## This option is appropriate for random effects. 
+
+  pinv<-function(V,M,rank.tol=1e-6) {
+  ## a local pseudoinverse function
     D <- eigen(V,symmetric=TRUE)
     M1<-length(D$values[D$values>rank.tol*D$values[1]])
     if (M>M1) M<-M1 # avoid problems with zero eigen-values
@@ -2617,8 +2633,10 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
     res <- D$vectors%*%(D$values*t(D$vectors))  ##D$u%*%diag(D$d)%*%D$v
     attr(res,"rank") <- M
     res
-  }
+  } ## end of pinv
+  
   p.table <- pTerms.table <- s.table <- NULL
+
   if (freq) covmat <- object$Ve else covmat <- object$Vp
   name <- names(object$edf)
   dimnames(covmat) <- list(name, name)
@@ -2626,9 +2644,14 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
   est.disp <- object$scale.estimated
   if (!is.null(dispersion)) { 
     covmat <- dispersion * covmat.unscaled
+    object$Ve <- object$Ve*dispersion/object$sig2 ## freq
+    object$Vp <- object$Vp*dispersion/object$sig2 ## Bayes
     est.disp <- FALSE
   } else dispersion <- object$sig2
  
+
+  ## Now the individual parameteric coefficient p-values...
+
   se <- diag(covmat)^0.5
   residual.df<-length(object$y)-sum(object$edf)
   if (object$nsdf>0) # individual parameters
@@ -2645,6 +2668,8 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
       dimnames(p.table) <- list(names(p.coeff), c("Estimate", "Std. Error", "t value", "Pr(>|t|)"))
     }    
   } else {p.coeff <- p.t <- p.pv <- array(0,0)}
+
+  ## Next the p-values for parametric terms, so that factors are treated whole... 
   
   term.labels<-attr(object$pterms,"term.labels")
   nt<-length(term.labels)
@@ -2683,6 +2708,7 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
   } else { pTerms.df<-pTerms.chi.sq<-pTerms.pv<-array(0,0)}
 
   ## Now deal with the smooth terms....
+
   m <- length(object$smooth) # number of smooth terms
   
   if (p.type < 0 ) {
@@ -2697,7 +2723,7 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
 
   df <- edf1 <- edf <- s.pv <- chi.sq <- array(0, m)
   if (m>0) # form test statistics for each smooth
-  { if (!freq) { 
+  { if (p.type < 5) { ## Bayesian p-values required 
       sub.samp <- max(1000,2*length(object$coefficients)) 
       if (nrow(object$model)>sub.samp) { ## subsample to get X for p-values calc.
         seed <- try(get(".Random.seed",envir=.GlobalEnv),silent=TRUE) ## store RNG seed
@@ -2718,15 +2744,29 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
       X <- X[!is.na(rowSums(X)),] ## exclude NA's (possible under na.exclude)
       ## get corrected edf
       #edf1 <- 2*object$edf - rowSums(object$Ve*(t(X)%*%X))/object$sig2
-    }
-    for (i in 1:m)
-    { start <- object$smooth[[i]]$first.para;stop <- object$smooth[[i]]$last.para
-      V <- covmat[start:stop,start:stop,drop=FALSE] # cov matrix for smooth
+    } ## end if (p.type<5)
+
+    for (i in 1:m) { ## loop through smooths
+      fr.pval <- object$smooth[[i]]$fr.pval  ## should full rank frequentist p-value be used?
+      if (is.null(fr.pval)) fr.pval <- FALSE 
+
+      start <- object$smooth[[i]]$first.para;stop <- object$smooth[[i]]$last.para
+
+      if (p.type==5||fr.pval) { ## use frequentist cov matrix for smooth
+        V <- object$Ve[start:stop,start:stop,drop=FALSE] 
+      } else V <- object$Vp[start:stop,start:stop,drop=FALSE] ## Bayesian
+      
       p <- object$coefficients[start:stop]  # params for smooth
+
       edf1[i] <- edf[i] <- sum(object$edf[start:stop]) # edf for this smooth
       ## extract alternative edf estimate for this smooth, if possible...
       if (!is.null(object$edf1)) edf1[i] <-  sum(object$edf1[start:stop]) 
-      if (freq) { ## old style frequentist
+ 
+      if (fr.pval) { ## smooth requires full rank frequentist p-value
+        V <- pinv(V,object$smooth[[i]]$df) # get (pseudo)inverse of V
+        chi.sq[i] <- t(p)%*%V%*%p
+        df[i] <- attr(V, "rank")
+      } else if (p.type==5) { ## old style frequentist
         M1 <- object$smooth[[i]]$df
         M <- min(M1,ceiling(2*sum(object$edf[start:stop]))) ## upper limit of 2*edf on rank
         V <- pinv(V,M) # get rank M pseudoinverse of V
@@ -2752,17 +2792,17 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
       }
       names(chi.sq)[i]<- object$smooth[[i]]$label
       
-      if (freq) {
+      if (fr.pval || p.type == 5) {
         if (!est.disp)
          s.pv[i] <- pchisq(chi.sq[i], df = df[i], lower.tail = FALSE)
         else
          s.pv[i] <- pf(chi.sq[i]/df[i], df1 = df[i], df2 = residual.df, lower.tail = FALSE)
          ## p-values are meaningless for very small edf. Need to set to NA
-        if (df[i] < 0.5) s.pv[i] <- NA
+        if (df[i] < 0.1) s.pv[i] <- NA
       }
     }
     if (!est.disp) {
-      if (freq) {
+      if (p.type==5) {
         s.table <- cbind(edf, df, chi.sq, s.pv)      
         dimnames(s.table) <- list(names(chi.sq), c("edf", "Est.rank", "Chi.sq", "p-value"))
       } else {
@@ -2770,7 +2810,7 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE, p.type=0, ...)
         dimnames(s.table) <- list(names(chi.sq), c("edf", "Ref.df", "Chi.sq", "p-value"))
       }
     } else {
-      if (freq) {
+      if (p.type==5) {
         s.table <- cbind(edf, df, chi.sq/df, s.pv)      
         dimnames(s.table) <- list(names(chi.sq), c("edf", "Est.rank", "F", "p-value"))
       } else {
@@ -2819,7 +2859,7 @@ print.summary.gam <- function(x, digits = max(3, getOption("digits") - 3),
 }
 
 
-anova.gam <- function (object, ..., dispersion = NULL, test = NULL,  freq=FALSE,p.type=0)
+anova.gam <- function (object, ..., dispersion = NULL, test = NULL,  freq=TRUE,p.type=0)
 # improved by Henric Nilsson
 {   # adapted from anova.glm: R stats package
     dotargs <- list(...)
